--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,8 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import '../styles/global.css';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle = "Chemtechについて";
 ---
 
@@ -35,12 +37,15 @@ const pageTitle = "Chemtechについて";
 				</linearGradient>
 			</defs>
 		</svg>
-		<a href="/">トップ</a>
-		<a href="/about/">概要</a>
+		<Header />
 		<h1>{pageTitle}</h1>
 		<h2>本サイトについて</h2>
 
 		<p>試験中。随時更新予定。</p>
+		<Footer />
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</main>
 </Layout>
 
@@ -50,7 +55,6 @@ const pageTitle = "Chemtechについて";
 		padding: 1rem;
 		width: 800px;
 		max-width: calc(100% - 2rem);
-		color: white;
 		font-size: 20px;
 		line-height: 1.6;
 	}
