--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,9 @@
+@charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600&display=swap');
+
 html {
     background-color: #f1f5f9;
-    font-family: sans-serif;
+    font-family: Noto Sans JP;
   }
   
   body {
@@ -20,7 +23,12 @@ html {
     font-size: 2.5rem;
   }
 
-  /* ナビゲーションのスタイル */
+body {
+    margin: 0;
+    padding: 0;
+}
+
+/* ナビゲーションのスタイル */
 .hamburger {
   padding-right: 20px;
   cursor: pointer;
