ビルドの調整

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,17 @@ import Social from './Social.astro';
 ---
 
 <footer>
-    <Social platform="twitter" username="astrodotbuild" />
-    <Social platform="github" username="withastro" />
-    <Social platform="youtube" username="astrodotbuild" />
+    <div class="footer">
+        <Social platform="x" username="_chemtech" />
+        <Social platform="youtube" username="chemtech4278" />
+        <Social platform="github" username="ChemtechSci" />
+        <small>&copy;Copyright Chemtech. All rights reserved.</small>
+    </div>
 </footer>
+
+<style>
+    .footer {
+        color: #c9cbcd;
+        border-top: 0.01em solid #c9cdcd;
+    }
+</style>
