--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,12 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600&display=swap');
 
 html {
-    background-color: #f1f5f9;
+    background-color: white;
     font-family: Noto Sans JP;
   }
   
   body {
-    margin: 0 auto;
+    margin: 0;
     width: 100%;
     max-width: 80ch;
     padding: 1rem;
@@ -23,10 +23,6 @@ html {
     font-size: 2.5rem;
   }
 
-body {
-    margin: 0;
-    padding: 0;
-}
 
 /* ナビゲーションのスタイル */
 .hamburger {
@@ -89,4 +85,4 @@ body {
       }
   }
   
-  
+/* footerのレイアウトはlayouts/Footer.astroに記述しています */
