変数名の修正

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -3,7 +3,7 @@ import Layout from './Layout.astro';
 const { frontmatter } = Astro.props;
 ---
 
-<Layout pageTitle={frontmatter.title}>
+<Layout title={frontmatter.title}>
     <h1>{frontmatter.title}</h1>
     <p>著者: {frontmatter.author}</p>
     <slot />
