--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,8 +23,10 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<Header />
-		<slot />
-		<Footer />
+		<div class="wrapper">
+			<slot />
+			<Footer />
+		</div>
 		<script>
 			import "../scripts/menu.js";
 		</script>
