--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,6 +15,7 @@ import Social from './Social.astro';
 
 <style>
     .footer {
+        margin-top: 0.5rem;
         padding: 1rem;
         color: #c9cbcd;
         border-top: 0.01em solid #c9cdcd;
