記事内容の更新

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
-const pageTitle = "トップページ";
+const pageTitle = "Chemtech";
 ---
 
 <Layout title={pageTitle}>
 	<main>
-		<h1>{pageTitle}</h1>
 		<h2>試験中</h2>
 
 		<p>公開に向けて準備中です。</p>
