--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,24 +1,15 @@
 ---
-import Layout from './Layout.astro';
-const { frontmatter } = Astro.props;
+import Layout from '../../layouts/Layout.astro';
+const allPosts = await Astro.glob('../posts/*.md');
+const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+const pageTitle = "Tag Index";
 ---
-
-
-<Layout title={frontmatter.title}>
-  <p><em>{frontmatter.description}</em></p>
-  <p>{frontmatter.pubDate.toString().slice(0,10)}</p>
-
-  <p>著者: {frontmatter.author}</p>
-
-  <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
-
+<Layout title={pageTitle}>
   <div class="tags">
-    {frontmatter.tags.map((tag) => (
+    {tags.map((tag) => (
       <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
     ))}
   </div>
-
-  <slot />
 </Layout>
 <style>
   a {
