--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,12 @@ html {
   
   h1 {
     margin: 1rem 0;
+    padding-left: 0.5rem;
     font-size: 2.5rem;
+    border-bottom: 0.01em solid #c9cdcd;
+  }
+  p{
+    text-indent: 1rem;
   }
 
 
