ビルドが通らない

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ const pageTitle = "Chemtechについて";
 		<p>ゼミは概ね毎週1回のペースで開催され、長期休暇中はZOOM等を活用したオンラインゼミを行う場合もあります。日程や開催方式は参加者で調整するので、参加のしやすさが特長です。</p>
 
 		<h2>入会について</h2>
-		<p>東京工業大学の学生であれば、年次によらずいつでも入会できます。<a href="https:x.com/_chemtech" target="_blank rel="noopener noreferrer>公式X（旧：Twitter）アカウント</a>またはメール（titech.chemtech[at]gmail.com、[at]は@に置換）にてご連絡ください。</p>
+		<p>東京工業大学の学生であれば、年次によらずいつでも入会できます。<a href="https:x.com/_chemtech" target="_blank" rel="noopener noreferrer">公式X（旧：Twitter）アカウント</a>またはメール（titech.chemtech[at]gmail.com、[at]は@に置換）にてご連絡ください。</p>
 	</main>
 </Layout>
 
