--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,27 +1,26 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import BlogPost from '../../components/BlogPost.astro';
+
 
 export async function getStaticPaths() {
   const allPosts = await Astro.glob('../posts/*.md');
-
-  const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
-
-  return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag));
-    return {
-      params: { tag },
-      props: { posts: filteredPosts },
-    };
-  });
+  return [
+    { params: { tag: "astro" } },
+    { params: { tag: "成功" } },
+    { params: { tag: "コミュニティ" } },
+    { params: { tag: "ブログ" } },
+    { params: { tag: "後退" } },
+    { params: { tag: "公開学習" } },
+  ];
 }
 
 const { tag } = Astro.params;
 const { posts } = Astro.props;
+const filteredPosts = posts.filter((post) => post.frontmatter.tags?.includes(tag));
 ---
 <Layout title={tag}>
   <p>{tag}のタグが付いた記事</p>
   <ul>
-    {posts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
+    {filteredPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
   </ul>
 </Layout>
