--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,4 +10,4 @@ const pageTitle = "私のAstro学習ブログ";
   <ul>
     {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
   </ul>
-</BaseLayout>
+</Layout>
