フォント調整がうまくいかない

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -11,3 +11,5 @@ const pageTitle = "私のAstro学習ブログ";
     {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
   </ul>
 </Layout>
+
+<style></style>
