--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,18 +1,11 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-const allPosts = await Astro.glob('../pages/posts/*.md');
+import Layout from '../layouts/Layout.astro'
+import BlogPost from '../components/BlogPost.astro';
 const pageTitle = "私のAstro学習ブログ";
 ---
 
 <Layout title={pageTitle}>
-	<main>
-		<h1>{pageTitle}</h1>
-		<h2>Chemtechとは？</h2>
-		
-        <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
-	</main>
+  <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
 </Layout>
 
-<style>
-</style>
+<style></style>
