--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,11 +1,15 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import BlogPost from '../components/BlogPost.astro';
+const allPosts = await Astro.glob('../pages/posts/*.md');
 const pageTitle = "私のAstro学習ブログ";
 ---
 
 <Layout title={pageTitle}>
   <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
+  <ul>
+    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+  </ul>
 </Layout>
 
 <style></style>
