--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,9 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+	html {
+		font-family: Noto Sans JP;
+	}
 	:root {
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
