--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,7 +35,20 @@ html {
     text-indent: 1rem;
   }
 
+/* タグのスタイル*/
+.tags {
+    display: flex;
+    flex-wrap: wrap;
+}
 
+.tag {
+    margin: 0.25em;
+    border: dotted 1px #a1a1a1;
+    border-radius: .5em;
+    padding: .5em 1em;
+    font-size: 1.15em;
+    background-color: #F8FCFD;
+}
 /* ナビゲーションのスタイル */
 nav {
     width: 100%;
