--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,18 +1,18 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-
+import BlogPost from '../../components/BlogPost.astro';
 
 export async function getStaticPaths() {
   const allPosts = await Astro.glob('../posts/*.md');
-  return [
-    { params: { tag: "astro" } },
-    { params: { tag: "成功" } },
-    { params: { tag: "コミュニティ" } },
-    { params: { tag: "ブログ" } },
-    { params: { tag: "後退" } },
-    { params: { tag: "公開学習" } },
-  ];
-}
+  const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+  return uniqueTags.map((tag) => {
+    const filteredPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag));
+    return {
+      params: { tag },
+      props: { posts: filteredPosts },
+    };
+  });
+} 
 
 const { tag } = Astro.params;
 const { posts } = Astro.props;
